# xdg-desktop-portal-regolith

./: README.md  implement-me.txt  meson.build  timeouts.txt
.github/workflows/: prepare-release.yml  publish-testing.yml  publish-unstable.yml  test.yml
data/: meson.build  org.freedesktop.impl.portal.desktop.regolith.service.in  portals.metainfo.xml.in  regolith-portals.conf  regolith-wayland-portals.conf  regolith-x11-portals.conf  regolith.portal  xdg-desktop-portal-regolith.service.in
debian/: changelog  control  copyright  xdg-desktop-portal-regolith-wayland-config.install  xdg-desktop-portal-regolith-x11-config.install  xdg-desktop-portal-regolith.install
po/: POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+162 more)
src/: XdgDesktopPortalRegolith.vala  meson.build
src/Access/: Dialog.vala  Portal.vala
src/Account/: Portal.vala
src/AppChooser/: AppButton.vala  Dialog.vala
src/Background/: Portal.vala
src/Clipboard/: Portal.vala
src/DynamicLauncher/: Portal.vala
src/FileChooser/: Portal.vala
src/InputCapture/: Portal.vala
src/Lockdown/: Portal.vala
src/Print/: Portal.vala
src/RemoteDesktop/: Portal.vala
src/ScreenCast/: Portal.vala
src/Screenshot/: Portal.vala
src/Settings/: Portal.vala
src/Wallpaper/: Portal.vala
