executable(
    meson.project_name(),
    'Access/Choice.vala',
    'Access/Portal.vala',
    'Account/Portal.vala',
    'AppChooser/AppButton.vala',
    'Clipboard/Portal.vala',
    'AppChooser/Dialog.vala',
    'AppChooser/Portal.vala',
    'Background/NotificationRequest.vala',
    'Background/Portal.vala',
    'DynamicLauncher/Portal.vala',
    'FileChooser/Portal.vala',
    'InputCapture/Portal.vala',
    'Lockdown/Portal.vala',
    'Print/Portal.vala',
    'RemoteDesktop/Portal.vala',
    'ScreenCast/Portal.vala',
    'Screenshot/Portal.vala',
    'Settings/Portal.vala',
    'Wallpaper/Portal.vala',
    configure_file(input: 'Config.vala.in', output: '@BASENAME@', configuration: conf_data),
    'ExternalWindow.vala',
    'XdgDesktopPortalRegolith.vala',
    dependencies: [
        glib_dep,
        gobject_dep,
        gio_dep,
        gtk_deps,
        x11_dep
    ],
    install: true,
    install_dir: libexecdir
)
